bugfix - right nav, delete overflow

--- a/src/app/component/main-page/main-page.component.css
+++ b/src/app/component/main-page/main-page.component.css
@@ -23,9 +23,11 @@
 }
 
 .sidenav.right-sidenav {
-  width: 400px;
+  width: 350px ;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
+  flex: 0 0 350px;
+
 }
 
 mat-toolbar {
@@ -33,11 +35,19 @@ mat-toolbar {
   color: white;
 }
 
+.flexy-content{
+  display: flex;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 .content {
+  width: 100%;
+  overflow: hidden;
   margin: 5px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 mat-sidenav-container {
